# serve-7z-files

./: .gitignore  README.md  pyproject.toml  run.txt
zipserver/: main.py
